Title overlap issue solved

--- a/static/gallery/styles.css
+++ b/static/gallery/styles.css
@@ -595,7 +595,7 @@ div {
         z-index: 1;
     }
     .head-1 {
-        margin-top: 6vh;
+        margin-top: 10vh;
     }
     .main h1,
     .main2 h1,
